[gd_scene load_steps=2 format=3 uid="uid://cmcclkic510eu"]

[ext_resource type="Script" path="res://scripts/Game_Screen.gd" id="1_q3c6o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3c6o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 421.0
offset_right = 804.0
offset_bottom = 522.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="High_score" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "High Score"

[node name="Read_me" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Read Me"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 204.0
offset_right = 696.0
offset_bottom = 244.0
text = "Little different runner"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/High_score" to="." method="_on_high_score_pressed"]
[connection signal="pressed" from="VBoxContainer/Read_me" to="." method="_on_read_me_pressed"]
